# wzzzz

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  requirements-dev.txt
.github/workflows/: release.yml
api/: api-start.sh  api.dockerfile  celeryworker.dockerfile  worker-start.sh
api/app/: pyproject.toml
api/app/app/: config.py  main.py  worker.py
api/app/app/api/api_v1/: api.py
api/app/app/api/api_v1/endpoints/: api_test.py  check_hhru.py  templ.py  users.py  vacancies.py
api/app/app/core/: __init__.py  celery_app.py  check.py  csv_writer.py  http_session.py  parsing.py  queries.py
api/app/app/crud/: __init__.py  crud_base.py  crud_template.py  crud_user.py  crud_vacancy.py  crud_vacancy_raw.py
api/app/app/db/: __init__.py  init_db.py  init_redis.py
api/app/app/schemas/: __init__.py  constraint.py  scheme_error.py  scheme_request.py  scheme_response.py  scheme_templates.py  scheme_user.py  scheme_vacanciy.py  scheme_vacancy.py  scheme_vacancy_raw.py
api/app/app/tasks/: worker.py
api/app/app/utils/: __init__.py
api/app/tests/: conftest.py
api/app/tests/api/api_v1/endpoints/: test_api_test.py  test_templates.py  test_users.py  test_vacancies.py  test_vavancies.py
api/app/tests/core/: conftest.py  deeper.json  test_check.py  test_csv_reader.py  test_http_session.py  test_parsing.py  test_queries.py  test_queriies.py  vac_deep_resp.json  vac_entry.json  vac_resp.json
api/app/tests/crud/: test_crud_template.py  test_crud_user.py  test_crud_vacancy.py  test_crud_vacancy_raw.py
api/app/tests/db/: test_db.py  test_mongo.py  test_redis.py
api/app/tests/schemas/: test_request_scheme.py  test_response_scheme.py  test_template_scheme.py
api/app/tests/tasks/: test_worker.py
bot/: bot.dockerfile
bot/app/: pyproject.toml
bot/app/app/: config.py  main.py
bot/app/app/core/: api_queries.py
bot/app/app/db/: init_redis.py
bot/app/app/handlers/: add_template.py  start.py  templ.py  template.py  templates.py
bot/app/app/keyboards/: start.py  templates_kb.py
bot/app/app/middleware/: api_queries.py  session.py
bot/app/app/schemas/: dialog_states.py  scheme_errors.py
bot/app/tests/: test_connections.py
bot/app/tests/handlers/: test_template.py
scripts/: dev.sh  prod.sh
