[tool.poetry]
name = "wzzzz api"
version = "0.0.1"
description = "Wzzzz API"
authors = ["Konstantin Klepikov <oformleno@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.6"
redis = "5.0.1"
passlib = "1.7.4"
toml = "0.10.2"
aiogram = "3.1.1"
pydantic = "^2.3"
aiogram-dialog = "2.0.0"
pydantic-settings = "^2.0.3"
python-dotenv = "1.0.0"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = ">=0.12.0,<0.23.0"}
python-jose = {extras = ["cryptography"], version = "3.3.0"}
python-multipart = "0.0.5"
bcrypt = "4.0.1"
aiohttp = "^3.8.4"
neo4j = "5.11.0"
motor = "^3.1.1"
beautifulsoup4 = "^4.11.2"
aiocsv = "^1.2.4"
aiofiles = "^23.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=4.6"
ipython = "^8.0.0"
mypy = "^1.0.1"
black = "^21.12b0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.20.3"
click = "^8.1.3"
pytest-aiohttp = "^1.0.4"
requests = "^2.28.2"
httpx = "^0.23.3"
aioresponses = "^0.7.5"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
asyncio_mode = "auto"
